# NitrogenGenerator

./: .gitignore  .gitmodules  CLAUDE.md  NitrogenGenerator.kicad_pcb  NitrogenGenerator.kicad_pro  NitrogenGenerator.kicad_sch  NitrogenGenerator.kicad_sym  PnID.kicad_sch  README.md  build.sh  fp-lib-table  sym-lib-table
CubeMX/: .mxproject  CMakeLists.txt  CubeMX.ioc  NitrogenGenerator.ioc  STM32G030XX_FLASH.ld  build.sh  callbacks.cpp  font_to_header.py  ibmplexsans_regular_18_mono.hpp  mcp.cpp  mcp.h  png_to_header.py  screen.cpp  screen.h
CubeMX/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
CubeMX/EWARM/: CubeMX.ewd  CubeMX.ewp  stm32g030xx_sram.icf
CubeMX/cmake/: gcc-arm-none-eabi.cmake  generate_font.cmake
CubeMX/screen_test/: Base64.h  CMakeLists.txt  fixed-containers  magic_enum  screen_test.cpp
NitrogenGenerator.pretty/: CONN_726386-2_TEC.kicad_mod  ERM19264DNS-4.kicad_mod  IRM-45_MWU.kicad_mod  R-78E-0.5_RCP.kicad_mod  SMD6_AA28F-R1_BTI.kicad_mod  TLV70433DBVR.kicad_mod
NitrogrenGenerator.models/: SMD6_AA28F-R1_BTI.step  SOT23-5.stp  c-1-282836-0-j-3d.stp  power_supply_irm-45-24.stp
media/: aeron2.ai  aeron2.dxf
solidworks/: 1309K13_Compressed Air Filter_Bracket.SLDPRT  3196K382_Pressure Transmitter.SLDPRT  51305K307_Push-to-Connect Tube Fitting with Universal Thread.SLDPRT  5225K119_Push-to-Connect Tube Fitting for Air.SLDPRT  5225K725_Push-to-Connect Tube Fitting for Air.SLDPRT  6017N15_Economy Pressure Transmitter.SLDPRT  6534K46_Industrial Quick-Disconnect Hose Coupling for Air.SLDPRT  9546K205_Heavy Duty Threaded-Stud Bumper.SLDPRT  Clamp.SLDPRT  Clamp2.SLDPRT  ControllerBox.SLDPRT  IndicatorWasher.SLDPRT  InputCovert.SLDPRT  LEDStandoff.SLDPRT  MNH-1512A.SLDPRT  MNH-1512A_Clamp.SLDPRT  Nipple3in0.25npt.SLDPRT  NitrogenDistributor.SLDPRT  NitrogenGenerator.SLDASM  NitrogenGeneratorCase.SLDPRT  NitrogenGeneratorCase_Hood.SLDPRT  OuputGuard.SLDPRT  PCBStandoff.SLDPRT  PneumaticPlusMiniRegulator.SLDPRT  PneumaticPlusMiniRegulator_Bracket.SLDPRT  Tee0.125nptInto0.25.SLDPRT  handle.SLDPRT
(+4 files in other folders)
